--- a/Capstone_Location_Problem.ipynb
+++ b/Capstone_Location_Problem.ipynb
@@ -1,14 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Location Problem:\n",
+    "# Location Problem:\n",
     "\n",
-    "### This notebook will be mainly used for the capstone project."
+    "This notebook will be mainly used for the capstone project."
    ]
   },
   {
